maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: ';' expected but 'while' found.
      case 0 =>setDirection(Direction.NORTH) while(!estFaceMur()){avance()};etat = 1
                                             ^