maze.island.IslandMaze.scala.code
var etat = 0
override def run() {
  while(!porteBiscuit()){
    etat match  {
      case 0 =>setDirection(Direction.NORTH) while(!estFaceMur()){avance()};etat = 1
      case 1 => gauche();if(!estFaceMur()){avance()};else{keepHandOnSideWall()};etat = 0
    }
    if(estSurBiscuit()){
      prendBiscuit()
    }
  
}
}

def keepHandOnSideWall(){
  while(estFaceMur()){
    droite()
  }
  avance()
}